<?xml version="1.0"?>
<package format="2">
  <name>bms_interface</name>
  <version>0.1.0</version>
  <description>The bms_interface package for unified BMS communication and ROS publishing</description>

  <maintainer email="deepak@anscer.com">Deepak Rajasekaran</maintainer>
  <author email="deepak@anscer.com">Deepak Rajasekaran</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export/>
</package>
